--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -6,16 +6,83 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link type="text/css" rel="stylesheet" href="/stylesheet/stylesheet.css">
+    <script src="/scripts/jquery-3.7.1.js"></script>
+    <script src="/scripts/main.js"></script>
 </head>
 <body>
+
     <header>
+        <section class="header-container">
+            <a href="index.html" class="logo">
+                <img src="/assets/logo.svg" title="" alt="">
+            </a>
+            <a href="/templates/novelty.html" class="header-links">Объявления</a>
+            <a href="/templates/method.html" class="header-links">Методический кабинет</a>
+            <a href="/templates/teachers.html" class="header-links">Преподаватели</a>
+            <a href="/templates/student.html" class="header-links">Студенческая аудитория</a>
+            <a href="/templates/everything.html" class="header-links">Разное</a>
+        </section>
     </header>
 
-    <section class="main">
+    
+    
+    <section class="main basic">
+        <div class="main-text-form">
+            <p>Кафедра информационных технологий <span>БГТУ им. В.Г. Шухова</span></p>
+        </div>
     </section>
-
+        
     <footer>
-
+        <section class="footer-info">
+            <div class="footer-info-block">
+                <div class="title">
+                    Адрес: 
+                </div>
+                <div class="info">
+                    <p>Россия, г. Белгород, ул. Костюкова, 46;</p>
+                    <p>почтовый индекс: 308012;</p>
+                    <p>кабинет 418 ГК</p>
+                    <p>тел.:30-99-01, внутр.:1-4-91</p>
+                    <p>e-mail: kint@intbel.ru;</p>
+                    <p>web-master: lep@intbel.ru</p>
+                </div>
+            </div>
+            <div class="footer-info-block">
+                <div class="title">
+                    Заведующий кафедрой: 
+                </div>
+                <div class="info">
+                    <p>Старченко Денис Николаевич;</p>
+                    <p>каб. 512а главного корпуса;</p>
+                    <p>тел.: (4722) 30-99-30; (4722) 30-99-01;</p>
+                    <p>e-mail: starchenko.dn@bstu.ru;</p>
+                    <p>e-mail: kint@intbel.ru;</p>
+                    <p>telegram: @DenisNSt</p>
+                </div>
+            </div>
+            <div class="footer-photo">
+                <img src="/assets/DNS.png">
+            </div>
+        </section>
+        <div class="footer-social-block">
+            <a href="" class="social-net">
+                <img src="/assets/telegram.png">
+            </a>
+            <a href="" class="social-net">
+                <img src="/assets/vk.png">
+            </a>
+            <a href="" class="social-net">
+                <img src="/assets/youtube.png">
+            </a>
+        </div>
+        <div class="footer-bottom-line">
+            <div class="bottom-line-child"></div>
+            <div class="bottom-line-child">2024 BSTU. Все права защищены</div>
+            <div class="bottom-line-child"><img class="bstu-logo"></div>
+        </div>
     </footer>
 </body>
 </html>
+<script>
+    
+</script>
