--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -1,8 +1,196 @@
-$black: #444;
-$red: #e42e2c;
 $white: #ffffff;
-$gray: #E7eaea;
+$blue: #122d52;
+$active-link: #9a0b0b;
+$active-bottom-link: #8FDAFB;
+
+$logo-width: 100px;
+$logo-height: 100px;
+$header-bottom-height: 75px;
+
+@font-face {
+    font-family: "PFCentro";
+    src: url('/fonts/PFCentroSlabPro-Regular.eot'); /* IE9 Compat Modes */
+    src: url('/fonts/PFCentroSlabPro-Regular.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/fonts/PFCentroSlabPro-Regular.woff') format('woff2'), /* Modern Browsers */
+    url('/fonts/PFCentroSlabPro-Regular.woff') format('woff'), /* Modern Browsers */
+    url('/fonts/PFCentroSlabPro-Regular.ttf') format('truetype');
+    font-style: normal;
+    font-weight: 500;
+    text-rendering: optimizeLegibility;
+}
+
+@font-face {
+    font-family: "PFCentroMedium";
+    src: url('/fonts/PFCentroSlabPro-Medium.eot'); /* IE9 Compat Modes */
+    src: url('/fonts/PFCentroSlabPro-Medium.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/fonts/PFCentroSlabPro-Medium.woff') format('woff2'), /* Modern Browsers */
+    url('/fonts/PFCentroSlabPro-Medium.woff') format('woff'), /* Modern Browsers */
+    url('/fonts/PFCentroSlabPro-Medium.ttf') format('truetype');
+    font-style: normal;
+    font-weight: 500;
+    text-rendering: optimizeLegibility;
+}
+
+@font-face {
+    font-family: "PT Sans Bold";
+    src: url('/fonts/PT_Sans-Web-Bold.ttf') format('truetype');
+    font-style: normal;
+    font-weight: 500;
+    text-rendering: optimizeLegibility;
+}
+
+@font-face {
+    font-family: "PT Sans Regular";
+    src: url('/fonts/PT_Sans-Web-Regular.ttf') format('truetype');
+    font-style: normal;
+    font-weight: 400;
+    text-rendering: optimizeLegibility;
+}
+
 
 header{
-    background: black;
+    display: flex;
+    flex-direction: column;
+
+    .header-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        background: $white;
+        align-items: center;
+        width: 80%;
+        margin: 0 auto;
+    
+        .header-links{
+            color: $blue;
+            font-weight: 600;
+            font-size: 24px;
+            font-family: "PFCentroMedium";
+            
+    
+            &.active{
+                color: $active-link !important;
+            }
+        }
+    
+        .logo{
+    
+            img{
+                width: $logo-width;
+                height: $logo-height;
+            }
+        }
+    }
+
+    .header-container-bottom{
+        background: $blue;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        
+        .header-bottom{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 80%;
+            background: $blue;
+            margin: 0 auto;
+            align-items: center;
+            height: 20px;
+        
+            &.active{
+                max-height: $header-bottom-height;
+            }
+
+            .header-bottom-links{
+                color: $white;
+                font-family: "PFCentro";
+                font-size: 20px;
+                font-weight: 500;
+
+                &.active{
+                    color: $active-bottom-link;
+                }
+            }
+
+        }
+    }
+}
+
+
+footer{
+    .footer-info{
+        width: 40%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 0 auto;
+        
+        .footer-info-block{
+            display: flex;
+            flex-direction: column;
+
+
+            .title{
+                font-family: "PT Sans Bold";
+                color: $blue;
+                font-size: 24px;
+            }
+
+            .info{
+                margin-top: 10px;
+                display: flex;
+                flex-direction: column;
+
+                p{
+                    font-size: 16px;
+                    font-family: "PT Sans Regular";
+                    margin: 0;
+                    color: $blue
+                }
+            }
+        }
+
+        .footer-photo{
+            border-radius: 50%;;
+            img{
+                width: 120px;
+                height: 120px;
+                border-radius: 50%;;
+            }
+        }
+    }
+
+    .footer-social-block{
+        width: 6%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 15px;
+
+        a{
+
+            img{
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+            }
+        }
+    }
+
+    .footer-bottom-line{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 10px;
+
+        .bottom-line-child{
+            font-family: "PT Sans Bold";
+            color: $blue;
+            font-size: 16px;
+        }
+    }
 }
